# snailos

./: .bazelignore  .bazelrc  .gitignore  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bzlmod  extensions.bzl  http_archive.bzl  package.json  pnpm-lock.yaml  rules_nixpkgs_cc.patch  shell.nix  workspace.bzl
.github/workflows/: main.yml
config/: BUILD.bazel  compilation_modes.bzl
pkg/: BUILD.bazel  emscripten_foreign_cc.bzl  src_archive.bzl  srcs.bzl  wasm_binaries.bzl
pkg/ash/: README.md  busybox.conf
pkg/busybox/: BUILD.bazel  busybox.patch  src.bzl
pkg/busybox/config/: BUILD.bazel  busybox_config.bzl
pkg/busybox/interop/: BUILD  post.js  pre.js
pkg/lzo/: BUILD.bazel  src.bzl
pkg/z/: BUILD.bazel  src.bzl
src/: BUILD.bazel  async_io.rs  binfs.rs  closures.rs  compilation_mode.rs  entry_point.js.tpl  js.rs  lib.rs  os.rs  proc.rs  proc_closures.rs  term.rs  version.bzl  webpack.config.js
src/css/: BUILD.bazel  style.css
src/html/: index.html  index.tmpl.html
src/js/: entry_point.tmpl.js
src/wrap/: BUILD.bazel  post.js  pre.js  read.c  vfork.c  wait4.c  waitpid.c  wrap.c
