load("//pkg:emscripten_foreign_cc.bzl", "configure_make", "keyval")
load("//pkg:wasm_binaries.bzl", "wasm_binaries")

wasm_binaries(
    name = "bin",
    srcs = [":busybox.build"],
    visibility = ["//visibility:public"],
)

ARGS = {
    "HOSTCC": "cc",
    "HOSTCXX": "c++",
}

K8_ARGS = {
    "CC": "cc",
}

EM_ARGS = {
    "AR": "${EMSCRIPTEN}/emar",
    "AS": "false",  # refuse to assemble
    "CC": "${EMSCRIPTEN}/emcc",
    "NM": "${EMSCRIPTEN}/emnm",
    "OBJCOPY": "${EMSCRIPTEN}/../bin/llvm-objcopy",
    "OBJDUMP": "${EMSCRIPTEN}/../bin/llvm-objdump",
    "SKIP_STRIP": "y",
    "CFLAGS_busybox": '"{}"'.format(" ".join([
        # See: https://github.com/emscripten-core/emscripten/issues/20753
        "${EMSCRIPTEN}/system/lib/libc/musl/src/signal/sigisemptyset.c",
        "--pre-js=${EXT_BUILD_ROOT}/$(execpath //pkg/busybox/interop:pre_js)",
        "--post-js=${EXT_BUILD_ROOT}/$(execpath //pkg/busybox/interop:post_js)",
        "-sEXPORT_ES6",
        "-sMODULARIZE",
        "-sWASM_BIGINT",
    ])),
}

CONFIG = "//pkg/busybox/config"

configure_make(
    name = "busybox.build",
    args = select({
        "@platforms//cpu:wasm32": keyval(ARGS, EM_ARGS),
        "//conditions:default": keyval(ARGS, K8_ARGS),
    }),
    # TODO: select() for :JS inputs!
    build_data = [
        CONFIG,
        "//pkg/busybox/interop:pre_js",
        "//pkg/busybox/interop:post_js",
    ],
    # TODO: Update the configure patch,
    # so that it would update CFLAGS, LDFLAGS, etc. in the config file.
    configure_in_place = True,
    env = {"CONFIG": "$(execpath //pkg/busybox/config)"},
    lib_source = "@busybox_src//:all",
    out_binaries = select({
        "@platforms//cpu:wasm32": [
            "busybox.js",
            "busybox.wasm",
        ],
        "//conditions:default": ["busybox"],
    }),
    postfix_script = select({
        "@platforms//cpu:wasm32": "\n".join([
            'sed s/busybox_unstripped/busybox/g < _install/bin/busybox > "${INSTALLDIR}/bin/busybox.js"',
            'cp busybox_unstripped.wasm "${INSTALLDIR}/bin/busybox.wasm"',
        ]),
        "//conditions:default": "cp _install/bin/* ${INSTALLDIR}/bin",
    }),
)
